Add media queries for small devices and font-awesome icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>About Me Project</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans|Gentium+Book+Basic' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <header class="masthead">
@@ -47,8 +48,8 @@
   <footer class="content-footer">
     <p>Say hi to me on these social networks:</p>
     <ul class="social">
-        <li><a href="https://github.com/raysapida">GitHub</a></li>
-        <li><a href="http://raysapida.github.io/">Blog</a></li>
+        <li><a href="https://github.com/raysapida" class="fa fa-github fa-2x"></a></li>
+        <li><a href="http://raysapida.github.io/" class="fa fa-rss fa-2x"></a></li>
     </ul>
     <p>Cover Image via <a href="http://unsplash.com">Unsplash</a></p>
   </footer>
